add new method IsEnabled. bug 126786 r=hyatt,rginda,rods a=asa